improvements, refinements, adding a collection for testing
